--- a/views/user/clients/clients.twig
+++ b/views/user/clients/clients.twig
@@ -19,9 +19,9 @@
         </div>
     <div class="post d-flex flex-column-fluid" id="kt_post">
     <!--begin::Container-->
-    <div id="kt_content_container" class="container-xxl">
+    <div id="kt_content_container" class="container-fluid">
         <div class="layout-px-spacing">
-            <div class="middle-content container-xxl p-0">
+            <div class="middle-content container-fluid p-0">
                 <div id="call-ringing"></div>
 
 
