--- a/views/user/includes/navbar.twig
+++ b/views/user/includes/navbar.twig
@@ -964,7 +964,7 @@
                                 </div>
                                 <!--end::Avatar-->
                                 <!--begin::Username-->
-                                <div class="d-flex flex-column">
+                                <div class="d-flex flex-column" style="overflow: auto;">
                                     <div class="fw-bolder d-flex align-items-center fs-5">{{ loginName }}
                                         <span class="badge badge-light-success fw-bolder fs-8 px-2 py-1 ms-2 text-uppercase">{{ loginType }}</span></div>
                                     <a href="#" class="fw-bold text-muted text-hover-primary fs-7">{{ userEmail }}</a>
