--- a/views/user/clients/members.twig
+++ b/views/user/clients/members.twig
@@ -19,10 +19,10 @@
         </div>
     <div class="post d-flex flex-column-fluid" id="kt_post">
     <!--begin::Container-->
-    <div id="kt_content_container" class="container-xxl">
+    <div id="kt_content_container" class="container-fluid">
         <div class="layout-px-spacing">
 
-            <div class="middle-content container-xxl p-0">
+            <div class="middle-content container-fluid p-0">
                 <div id="call-ringing"></div>
                 <div class="row layout-spacing">
                     <div class="col-xl-12 col-lg-12 col-sm-12  layout-spacing">
