--- a/views/user/includes/footer.twig
+++ b/views/user/includes/footer.twig
@@ -9,14 +9,12 @@
         <!--begin::Menu-->
         <ul class="menu menu-gray-600 menu-hover-primary fw-bold order-1">
             <li class="menu-item">
-                <a href="https://keenthemes.com" target="_blank" class="menu-link px-2">About</a>
+                <a href="/about" target="_blank" class="menu-link px-2">About</a>
             </li>
             <li class="menu-item">
-                <a href="https://devs.keenthemes.com" target="_blank" class="menu-link px-2">Support</a>
+                <a href="/support" target="_blank" class="menu-link px-2">Support</a>
             </li>
-            <li class="menu-item">
-                <a href="https://1.envato.market/EA4JP" target="_blank" class="menu-link px-2">Purchase</a>
-            </li>
+
         </ul>
         <!--end::Menu-->
     </div>
@@ -50,6 +48,11 @@
 <script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/fullcalendar/fullcalendar.min.js"></script>
 <script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/uuid/uuid4.min.js"></script>
 <script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/fullcalendar/custom-fullcalendar.js"></script>
+
+<script src="{{ env.APP_URL }}assets/dash/assets/js/custom/apps/user-management/users/list/table.js"></script>
+{#<script src="{{ env.APP_URL }}assets/dash/assets/js/custom/apps/user-management/users/list/export-users.js"></script>#}
+{#<script src="{{ env.APP_URL }}assets/dash/assets/js/custom/apps/user-management/users/list/add.js"></script>#}
+
 {#<script src="{{ env.APP_URL }}assets/dash/assets/plugins/custom/datatables/datatables.bundle.js"></script>#}
 <script src="{{ env.APP_URL }}assets/dash/assets/js/widgets.bundle.js"></script>
 <script src="{{ env.APP_URL }}assets/dash/assets/js/custom/widgets.js"></script>
