--- a/views/user/includes/footer.twig
+++ b/views/user/includes/footer.twig
@@ -42,13 +42,11 @@
 
 <script src="{{ env.APP_URL }}assets/dash/assets/plugins/global/plugins.bundle.js"></script>
 <script src="{{ env.APP_URL }}assets/dash/assets/js/scripts.bundle.js"></script>
+<script src="{{ env.APP_URL }}assets/dash/assets/plugins/custom/datatables/datatables.bundle.js"></script>
 <script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/table/datatable/datatables.js"></script>
-<script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/table/datatable/button-ext/dataTables.buttons.min.js"></script>
-{#<script src="{{ env.APP_URL }}assets/dash/assets/plugins/custom/datatables/datatables.bundle.js"></script>#}
 <script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/fullcalendar/fullcalendar.min.js"></script>
 <script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/uuid/uuid4.min.js"></script>
 <script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/fullcalendar/custom-fullcalendar.js"></script>
-
 <script src="{{ env.APP_URL }}assets/dash/assets/js/custom/apps/user-management/users/list/table.js"></script>
 {#<script src="{{ env.APP_URL }}assets/dash/assets/js/custom/apps/user-management/users/list/export-users.js"></script>#}
 {#<script src="{{ env.APP_URL }}assets/dash/assets/js/custom/apps/user-management/users/list/add.js"></script>#}
