--- a/views/user/includes/styles.twig
+++ b/views/user/includes/styles.twig
@@ -30,4 +30,20 @@
         background-color: #000 !important;
         color: white !important;
     }
+    .close{
+        display: inline-block;
+        font-weight: 500;
+        line-height: 1.5;
+        color: #181c32;
+        text-align: center;
+        vertical-align: middle;
+        cursor: pointer;
+        user-select: none;
+        background-color: transparent;
+        border: 1px solid transparent;
+        font-size: 1.1rem;
+        border-radius: .475rem;
+        transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+        font-size: 25px;
+    }
 </style>
