--- a/views/user/document_hub/client_index.twig
+++ b/views/user/document_hub/client_index.twig
@@ -2,16 +2,50 @@
 {% block content %}
     <link rel="stylesheet" href="https://unpkg.com/filepond/dist/filepond.css">
     <link rel="stylesheet" href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css">
-    <!--  BEGIN CONTENT AREA  -->
-    <div id="content"  class="main-content">
-        <div class="layout-px-spacing">
-            <div class="middle-content container-xxl p-0" >
+    <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
+        <!--begin::Toolbar-->
+        <div class="toolbar" id="kt_toolbar">
+            <!--begin::Container-->
+            <div id="kt_toolbar_container" class="container-fluid d-flex flex-stack">
+                <!--begin::Page title-->
+                <div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
+                    <!--begin::Title-->
+                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Document Hub List</h1>
+
+                </div>
+
+            </div>
+            <!--end::Container-->
+        </div>
+        <!--end::Toolbar-->
+        <!--begin::Post-->
+        <div class="post d-flex flex-column-fluid" id="kt_post">
+            <!--begin::Container-->
+            <div id="kt_content_container" class="container-fluid">
                 <div id="call-ringing"></div>
 
                 <div class="row layout-top-spacing layout-spacing">
                     <div class="col-xl-12 col-lg-12 col-md-12" >
-                        <div class="widget-content widget-content-area br-8">
-                            <div class="widget-content widget-content-area">
+                        <div class="widget-content widget-content-area card">
+                            <div class="card-header border-0 pt-6">
+                                <!--begin::Card title-->
+                                <div class="card-title">
+                                    <!--begin::Search-->
+                                    <div class="d-flex align-items-center position-relative my-1">
+                                        <!--begin::Svg Icon | path: icons/duotune/general/gen021.svg-->
+                                        <span class="svg-icon svg-icon-1 position-absolute ms-6">
+													<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+														<rect opacity="0.5" x="17.0365" y="15.1223" width="8.15546" height="2" rx="1" transform="rotate(45 17.0365 15.1223)" fill="currentColor" />
+														<path d="M11 19C6.55556 19 3 15.4444 3 11C3 6.55556 6.55556 3 11 3C15.4444 3 19 6.55556 19 11C19 15.4444 15.4444 19 11 19ZM11 5C7.53333 5 5 7.53333 5 11C5 14.4667 7.53333 17 11 17C14.4667 17 17 14.4667 17 11C17 7.53333 14.4667 5 11 5Z" fill="currentColor" />
+													</svg>
+												</span>
+                                        <!--end::Svg Icon-->
+                                        <input type="text" data-kt-customer-table-filter="search" id="search" class="form-control form-control-solid w-250px ps-15" placeholder="Search " />
+                                    </div>
+                                    <!--end::Search-->
+                                </div>
+
+                            </div>
                                 <div class="table-responsive">
                                     <table id="table"  class="table dt-table-hover" style="width:100%">
                                         <thead>
@@ -26,22 +60,13 @@
                                         <tbody>
                                         </tbody>
                                     </table>
-                                </div>
+
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!--  BEGIN FOOTER  -->
-        <div class="footer-wrapper">
-            <div class="footer-wrapper">
-                <div class="footer-section f-section-1">
-                    <p class="">Copyright © <span class="dynamic-year">2024</span> <a target="_blank" href="https://zotecsoft.com/">ZotecSoft</a>, All rights reserved.</p>
-                </div>
-            </div>
-        </div>
-        <!--  END FOOTER  -->
     </div>
     <div class="modal fade" id="editExampleModal" tabindex="-1" aria-labelledby="editExampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg">
@@ -116,6 +141,9 @@
                     {mData: 'statusView'},
                     {mData: 'action'},
                 ]
+            });
+            $('#search').on('keyup', function() {
+                $('#table').DataTable().search(this.value).draw();
             });
         });
         document.addEventListener('DOMContentLoaded', function () {
