--- a/views/user/invoice/list.twig
+++ b/views/user/invoice/list.twig
@@ -28,7 +28,7 @@
                             <div class="widget-content widget-content-area card">
                                 <div class="card-header border-0 pt-6">
                                     <!--begin::Card title-->
-                                    <div class="card-title">
+                                    <div class="col-md-6 text-start">
                                         <!--begin::Search-->
                                         <div class="d-flex align-items-center position-relative my-1">
                                             <!--begin::Svg Icon | path: icons/duotune/general/gen021.svg-->
@@ -43,7 +43,13 @@
                                         </div>
                                         <!--end::Search-->
                                     </div>
-
+                                    {% if loginType == "firm" %}
+                                    <div class="col-md-6 text-end">
+                                        <a href="/user/invoice/add" class="btn btn-primary  me-4"  >
+                                            <span class="btn-text-inner">ADD</span>
+                                        </a>
+                                    </div>
+                                    {% endif %}
                                 </div>
                                 <div class="table-responsive">
                                     <table id="table"  class="table dt-table-hover" style="width:100%">
@@ -296,7 +302,8 @@
             var csrf_token = $("input[name=csrf]").val();
             $.ajax({
                 url: '/user/api',
-                type: 'GET', data: {
+                type: 'GET',
+                data: {
                     id: deleteid,
                     page_name: "delete",
                     table_name: "invoice",
