--- a/views/user/document_hub/firm_index.twig
+++ b/views/user/document_hub/firm_index.twig
@@ -90,16 +90,20 @@
         </div>
     </div>
     <div class="modal fade" id="editExampleModal" tabindex="-1" aria-labelledby="editExampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-dialog modal-dialog-centered mw-650px">
             <div class="modal-content bg-white">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Request For Document</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="btn-close"></button>
                 </div>
+                <div class="modal-body scroll-y mx-5 mx-xl-5 my-7">
                 <form  method="post" id="DocumentForm" enctype="multipart/form-data">
-                    <div class="modal-body">
-                        <div class="row p-1">
-                            <div class="col-md-12">
+                    <div class="d-flex flex-column scroll-y me-n7 pe-7" id="kt_modal_add_user_scroll"
+                         data-kt-scroll="true" data-kt-scroll-activate="{default: false, lg: true}"
+                         data-kt-scroll-max-height="auto" data-kt-scroll-dependencies="#kt_modal_add_user_header"
+                         data-kt-scroll-wrappers="#kt_modal_add_user_scroll" data-kt-scroll-offset="300px"
+                         style="max-height: 570px;">
+                        <div class="fv-row mb-7 fv-plugins-icon-container">
                                     <label class="form-label">Client</label>
                                     <select class="form-select form-select-solid" aria-label="Client"  name="client_id">
                                         <option selected>Choose Client</option>
@@ -108,7 +112,7 @@
                                         {% endfor %}
                                     </select>
                             </div>
-                            <div class="col-md-12">
+                        <div class="fv-row mb-7 fv-plugins-icon-container">
                                 <div class="">
                                     <label class="form-label">Documents</label>
                                     <select class="js-example-basic-multiple form-select form-select-solid" aria-label="Documents" id="document_id" name="document_id[]" multiple>
@@ -118,17 +122,18 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="col-md-12">
+                        <div class="fv-row mb-7 fv-plugins-icon-container">
                                 <label class="form-label">Description</label>
-                                <textarea class="form-control" id="firm_des" name="firm_des" placeholder="Description"></textarea>
+                                <textarea class="form-control form-control-solid" id="firm_des" name="firm_des" placeholder="Description"></textarea>
                             </div>
                         </div>
-                    </div>
-                    <div class="modal-footer">
+
+                    <div class="modal-footer justify-content-center">
                         <button type="button"  class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                         <button type="button" name="add_new" id="btn-profile" class="btn btn-primary" onclick="request_for_document()">Request For Document</button>
                     </div>
                 </form>
+            </div>
             </div>
         </div>
     </div>
