--- a/views/user/document_hub/uploaded_document.twig
+++ b/views/user/document_hub/uploaded_document.twig
@@ -23,21 +23,13 @@
             <!--begin::Container-->
             <div id="kt_content_container" class="container-fluid">
                 <div id="call-ringing"></div>
-                <!-- /BREADCRUMB -->
 
-                <div class="row layout-spacing mt-5 mb-5">
-                    <div class="col-lg-12 justify-content-end text-end ">
-                        <button type="button" class="btn btn-primary  me-4" data-bs-toggle="modal" data-bs-target="#editExampleModal">
-                            <span class="btn-text-inner">Upload File</span>
-                        </button>
-                    </div>
-                </div>
                 <div class="row layout-spacing">
                     <div class="col-xl-12 col-lg-12 col-sm-12  layout-spacing">
                         <div class="widget-content widget-content-area card">
                             <div class="card-header border-0 pt-6">
                                 <!--begin::Card title-->
-                                <div class="card-title">
+                                <div class="col-md-6 text-start">
                                     <!--begin::Search-->
                                     <div class="d-flex align-items-center position-relative my-1">
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen021.svg-->
@@ -52,7 +44,11 @@
                                     </div>
                                     <!--end::Search-->
                                 </div>
-
+                                <div class="col-md-6 text-end">
+                                    <button type="button" class="btn btn-primary  me-4" data-bs-toggle="modal" data-bs-target="#editExampleModal">
+                                        <span class="btn-text-inner">Upload File</span>
+                                    </button>
+                                </div>
                             </div>
                             <div class="table-responsive">
                                 <table id="table"  class="table dt-table-hover" style="width:100%">
@@ -101,7 +97,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="modal-footer ">
+                        <div class="modal-footer justify-content-center">
                             <button type="button"  class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                             <button type="button" name="add_new" id="btn-profile" class="btn btn-primary" onclick="upload_document()">Upload Document</button>
                         </div>
